<resources>
    <string name="app_name">Rock, paper, scissors</string>
    <string name="welcome">Welcome</string>
    <string name="history">Game History</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play</string>
    <string name="statistics_title">Your all time statistics:</string>
    <string name="statistics">Win: %1$s Draw: %2$s Lose: %3$s</string>
    <string name="win">You win!</string>
    <string name="draw">Draw</string>
    <string name="lose">Computer wins!</string>
    <string name="vs">V.S.</string>
    <string name="you">You</string>
    <string name="com">Com</string>
</resources>
