<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/ivYou"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/vs"
        app:layout_constraintEnd_toStartOf="@+id/vs"
        app:layout_constraintTop_toTopOf="@+id/vs"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:padding="12dp"
        android:text="@string/vs"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTimestamp"
        app:layout_constraintStart_toStartOf="@+id/tvTimestamp"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestamp" />

    <TextView
        android:id="@+id/tvWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/vs"
        app:layout_constraintStart_toEndOf="@+id/vs"
        app:layout_constraintTop_toTopOf="@+id/vs"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="timestamp_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/tvWinner"
        app:layout_constraintStart_toStartOf="@+id/tvWinner"
        app:layout_constraintTop_toBottomOf="@+id/tvWinner" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/ivYou"
        app:layout_constraintStart_toStartOf="@+id/ivYou"
        app:layout_constraintTop_toBottomOf="@+id/ivYou" />

    <TextView
        android:id="@+id/tvCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com"
        app:layout_constraintEnd_toEndOf="@+id/ivCom"
        app:layout_constraintStart_toEndOf="@+id/vs"
        app:layout_constraintTop_toBottomOf="@+id/ivCom" />

</androidx.constraintlayout.widget.ConstraintLayout>